Updated documentation files

--- a/documentation_page/mkdocs.yml
+++ b/documentation_page/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: H.G.I.2
-site_url: https:// 
+site_url: https://Tobias-GH-Schulz.github.io/H.G.I.2/ 
 repo_url: https://www.github.com/tobias-gh-schulz/H.G.I.2
 repo_name: tobias-gh-schulz/H.G.I.2
 
